--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -56,4 +56,5 @@ html lang="en"
     = yield(:header)
     .container
       = yield
-  = render "layouts/footer"
+  .footer-magin
+    = render "layouts/footer"
