--- a/app/views/pictures/show.html.slim
+++ b/app/views/pictures/show.html.slim
@@ -40,7 +40,8 @@
       = link_to 'Back', pictures_path, class: "btn btn-warning"
       = link_to line_items_path(picture_id: @picture), method: :post, class: "btn btn-info float-right" do
         i.fas.fa-cart-plus Add To Cart
+    .col-md-1.share-button
+      = social_share_button_tag(@picture.title, :allow_sites => %w(twitter facebook))
 
-
-    .col-md-8
+    .col-md-6
       = image_tag(@picture.image_url, class: "picture-preview-large")
