--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= require social-share-button
  */
  @import "bootstrap";
 
@@ -87,6 +88,20 @@ footer {
   min-height: 250px;
   }
 }
+@media only screen and (max-width: 768px) {
+  .picture-preview-large {
+    width: 350px;
+    height: 250px;
+    margin-top: 25px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .picture-preview-large {
+    width: 250px;
+    height: 200px;
+    margin-top: 25px;
+  }
+}
 .card.border-warning.mb-2 {
   min-width: 200px;
   min-height: 200px;
@@ -113,3 +128,35 @@ footer {
 .fas.fa-paint-brush.big {
   font-size: 60px;
  }
+
+@media only screen and (max-width: 768px) {
+  .fas.fa-palette.big {
+    font-size: 25px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .fas.fa-paint-brush.big {
+    font-size: 25px;
+  }
+}
+
+.social-share-button {
+  .ssb-icon {
+    background-size: 30px 30px ;
+    height: 20px ;
+    width: 20px ;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .mb-5.text-center {
+    font-size: 10px;
+  }
+}
+.img-show {
+  width: 18rem;
+}
+@media only screen and (max-width: 768px) {
+  .img-show {
+    width: 13rem;
+  }
+}
