--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
+   *= require_tree .
  *= require_self
  *= require social-share-button
  */
@@ -21,7 +21,9 @@ $footer-color: #ffc107;
 body {
   height: 100%;
   background-color: $body-color;
-  font-family: proxima-nova, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-family: proxima-nova,
+  'Helvetica Neue',
+   Arial, Helvetica, sans-serif;
 }
 footer {
   background-color: $footer-color;
