--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -41,6 +41,9 @@ html lang="en"
                 i.fas.fa-user Account
               .dropdown-menu
                 .dropdown-item
+                  i.fab.fa-amazon-pay
+                  = link_to "Cart Status", charges_path
+                .dropdown-item
                   i.fas.fa-edit
                   = link_to "Edit User", edit_user_registration_path
                 .dropdown-item
