--- a/app/views/carts/index.html.slim
+++ b/app/views/carts/index.html.slim
@@ -6,7 +6,7 @@ hr/
 .row
   .col-lg-12
     section.section
-    - if @cart.present?
+    - if @cart.unpaid?
       = render(@cart.line_items)
       .columns
         .column
@@ -30,4 +30,3 @@ hr/
         script[src="https://js.stripe.com/v2/"]
         script
           | Stripe.setPublishableKey('pk_test_ShSBrTYDlTUZvNso1UvdQJbS');
-        // input[type="”hidden”" name="”stripeToken”"]
